--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "prettier --write ./src",
+    "lint": "eslint ./src/**/*.{js,ts,tsx,jsx}",
+    "format": "prettier --write ./src/**/*.{js,ts,tsx,jsx}",
     "prepare": "husky install"
   },
   "dependencies": {
