--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "immer": "^9.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
