--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.ts"
-  ]
+  "include": ["vite.config.ts"]
 }
