--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ahooks": "^3.7.6",
     "immer": "^9.0.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.0",
